--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -81,7 +81,7 @@ nav {
 nav a {
 	text-decoration: none;
 	margin-right: 60px;
-	color: lightgray;
+	color: grey;
 }
 
 .logo {
@@ -176,6 +176,73 @@ footer {
 	height: 150px;
 	margin-top: 30px;
 	padding: 30px 0;
+}
+
+footer p {
+	text-align: center;
+}
+
+.services-header-img {
+	margin-bottom: 30px;
+	margin: 0 auto 30px;
+}
+
+h1 {
+	font-size: 1.6rem;
+}
+
+.services-header {
+	margin-bottom: 30px;
+	padding-bottom: 30px;
+}
+
+.services-container {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-content: space-between;
+	border-bottom: 2px solid black;
+}
+
+.services-excerpt {
+	border: 1px solid black;
+	background-color: whitesmoke;
+	padding: 1.2rem;
+	width: 48%;
+	margin-bottom: 2.1rem;
+}
+
+.services-excerpt > button {
+	border: 1px solid black;
+	border-radius: 5px;
+	font-size: .7rem;
+	padding: .7rem 2.4rem;
+	margin-top: 1.2rem;
+	background-color: white;
+}
+
+.facts-section {
+	display: flex;
+	justify-content: space-between;
+	margin-top: 30px;
+}
+
+.facts-content {
+	width: 45%;
+}
+
+.facts-section ul {
+	margin-top: 2rem;
+	list-style-type: square;	
+}
+
+.facts-section li {
+	padding-left: 10px;
+	margin: 15px;
+}
+
+.services-info-img {
+	width: 48%;
 }
 
 footer p {
